--- a/angular.json
+++ b/angular.json
@@ -24,11 +24,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap-grid.min.css",
-              "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss"
-            ],
+            "styles": ["src/assets/styles/my-theme.scss", "src/styles.scss"],
             "scripts": []
           },
           "configurations": {
@@ -100,6 +96,7 @@
     }
   },
   "cli": {
-    "analytics": "6cdef99b-74c2-4527-9660-64b7a262c62b"
+    "analytics": "6cdef99b-74c2-4527-9660-64b7a262c62b",
+    "schematicCollections": ["@ngrx/schematics"]
   }
 }
