--- a/package.json
+++ b/package.json
@@ -16,15 +16,17 @@
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
     "@angular/forms": "^16.2.0",
-    "@angular/material": "^16.2.7",
+    "@angular/material": "^16.2.12",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ngrx/effects": "^16.3.0",
     "@ngrx/store": "^16.3.0",
     "@ngrx/store-devtools": "^16.3.0",
     "bootstrap": "^5.3.2",
     "json-server": "^0.17.4",
     "rxjs": "~7.8.0",
+    "sass-loader": "^13.3.2",
     "sweetalert2": "^11.7.32",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -33,6 +35,7 @@
     "@angular-devkit/build-angular": "^16.2.4",
     "@angular/cli": "^16.2.4",
     "@angular/compiler-cli": "^16.2.0",
+    "@ngrx/schematics": "^16.3.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
